account DELETE endpoint
